--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.2.0",
+    "@react-native-firebase/messaging": "^23.2.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
@@ -18,12 +21,16 @@
     "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
+    "qs": "^6.14.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-device-info": "^14.0.4",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-keychain": "^10.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.18.0",
