--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^12.0.1",
     "@react-native-firebase/app": "^23.2.0",
     "@react-native-firebase/messaging": "^23.2.0",
     "@react-native-picker/picker": "^2.11.1",
@@ -39,6 +40,7 @@
     "react-native-screens": "^4.11.1",
     "react-native-share": "^12.1.0",
     "react-native-svg": "^15.12.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-view-shot": "^4.0.3",
     "react-native-vision-camera": "^4.7.0",
     "react-redux": "^9.2.0",
