--- a/ios/STC/Info.plist
+++ b/ios/STC/Info.plist
@@ -34,6 +34,17 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>stc</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>stc</string>
+			</array>
+		</dict>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
